# ai-hiring-analysis

./: .gitignore  DOCUMENTATION.md  README.md  main.py  pyproject.toml
data/: mock_candidates.csv
src/: __init__.py  data_generator.py  maut_scorer.py  ml_classifier.py  sensitivity_analysis.py  visualizations.py
