[project]
name = "dfa-project"
version = "0.1.0"
description = "Decision Framing and Analytics - AI in Hiring Decisions Prototype"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "SALib>=1.4",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "plotly>=5.15",
    "scipy>=1.10",
    "scikit-learn>=1.3",
]
